--- a/login.css
+++ b/login.css
@@ -5,6 +5,7 @@
 }
 
 body {
+  background: linear-gradient(135deg, #6e7c7c, #2d3a3a);
     font-family: "rowdies";
     background-size: cover; 
     background-position: center; 
@@ -90,6 +91,16 @@ button {
 
 button:hover {
     background-color: #e63333;
+}
+
+.text-center a {
+  color: rgba(51, 51, 51, 0.8);
+  font-weight: 600;
+  
+}
+
+.text-center a:hover {
+  text-decoration: underline;
 }
 @keyframes fadeOut {
     from {
