--- a/account.css
+++ b/account.css
@@ -80,10 +80,11 @@ background-color: #1a2939;
   padding: 20px;
 }
 
-h3{
+h1{
   font-size: 32px;
   font-weight: bold;
   margin-bottom: 30px;
+  text-align: center;
 }
 
 .logo {
@@ -96,7 +97,7 @@ h3{
 .content {
   padding: 20px;
   background-color: #fff;
-  margin-top: 20px;
+  margin-top: 10px;
   flex-grow: 1;
   position: relative;
   z-index: 1; 
