--- a/salesreport.css
+++ b/salesreport.css
@@ -117,6 +117,7 @@ body {
     font-size: 32px;
     font-weight: bold;
     margin-bottom: 30px;
+    text-align: center;
   }
   .content {
     padding: 20px;
