--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ body {
 }
 
 .card .card-body{
-  padding-bottom: 100px;
+  padding-bottom: 80px;
 }
 
 /* Dashboard Main Title */
@@ -153,6 +153,7 @@ body {
 }
 
 .filter-category {
+  font-weight: bold;
   padding: 5px 10px;
   border-radius: 5px;
   font-size: 14px;
